Fixed alignment and styled userprofile components

--- a/web-client/src/styles/EditProfile.css
+++ b/web-client/src/styles/EditProfile.css
@@ -1,7 +1,6 @@
  .userprofile-form{
     width: 100%;
     display: flex;
-    height:310px;
     overflow: hidden;
     flex-wrap: wrap;
     margin-top: 2vh;
@@ -20,13 +19,16 @@
     justify-content: space-between;
     border-radius: 50%;
   
+  
+  
     /* clip-path: circle(78px at center); */
   }
+  .edit-info{
+    margin-left: 5px;
+  }
   .save-profile{
-    position: absolute;
     background: #ffffff;
     border: none;
-    margin-top: 310px;
     flex-wrap: wrap;
     flex-direction: column;
   }
