--- a/web-client/src/styles/Request.css
+++ b/web-client/src/styles/Request.css
@@ -45,7 +45,7 @@
 .request-ride-submitted {
   position: absolute;
   top: 0;
-  width: 80%;
+  width: 75%;
   display: flex;
   /* margin: auto; */
   height: 13%;
