--- a/web-client/src/styles/UserDetails.css
+++ b/web-client/src/styles/UserDetails.css
@@ -1,5 +1,5 @@
 .userdetails-container {
-    width: 20%;
+    width: 25%;
     background: #ffffff;
     -webkit-box-shadow: 1px 0 5px 0 rgba(0, 0, 0, 0.5);
     box-shadow: 1px 0 5px 0 rgba(0, 0, 0, 0.5);
